# gupaxtk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DIFFERENCES.md  Dockerfile  IDEAS.md  NOTES_ALGORITHM.md  NOTES_CLI.md  NOTES_XMRIG-PROXY.md  README.md  TODO_XMRvsBeast.md  build.rs  rust-toolchain.toml  typos.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lockbud.yml  rust.yml  typo.yml
pgp/: cyrix126.asc
src/: README.md  cli.rs  constants.rs  disk.rs  gupax.rs  helper.rs  inits.rs  main.rs  miscs.rs  node.rs  p2pool.rs  status.rs  sudo.rs  update.rs  xmr.rs  xmrig.rs  xvb.rs
src/app/: eframe_impl.rs  keys.rs  mod.rs  quit.rs  resize.rs
src/app/panels/: bottom.rs  mod.rs  quit_error.rs  top.rs
src/app/panels/middle/: gupax.rs  mod.rs  node.rs  xmrig.rs  xmrig_proxy.rs  xvb.rs
src/app/panels/middle/p2pool/: advanced.rs  mod.rs  simple.rs
src/app/panels/middle/status/: benchmarks.rs  mod.rs  p2pool.rs  processes.rs
src/components/: gupax.rs  mod.rs  node.rs  update.rs
src/disk/: consts.rs  errors.rs  gupax_p2pool_api.rs  mod.rs  node.rs  pool.rs  state.rs  status.rs  tests.rs
src/helper/: mod.rs  node.rs  p2pool.rs  tests.rs  xmrig.rs  xvb.rs
src/helper/xrig/: mod.rs  xmrig.rs  xmrig_proxy.rs
src/helper/xvb/: algorithm.rs  mod.rs  nodes.rs  priv_stats.rs  public_stats.rs  rounds.rs
src/utils/: constants.rs  errors.rs  ferris.rs  human.rs  macros.rs  mod.rs  panic.rs  regex.rs  resets.rs  sudo.rs  xmr.rs
utils/: README.md  create_tmp_env.sh  move_binary_inside.sh  package.sh  prepare.sh
utils/skel/linux/: Gupaxx.AppImage  Gupaxx.desktop
